# CPP_Project

./: CMakeLists.txt  main.cpp
include/: Company.h  File.h  List.h  User.h  config.h
include/Enum/: DepartmentEnum.h  JobEnum.h  PositionEnum.h  UserInfoEnum.h
include/List/: List.h
resource/: res.qrc
resource/file/: data.txt
src/: Company.cpp  File.cpp  User.cpp  mainwindow.cpp  sortinfo.cpp  userinfodialog.cpp  userupdata.cpp
src/Enum/: DepartmentEnum.cpp  JobEnum.cpp  PositionEnum.cpp  UserInfoEnum.cpp
src/Forms/: mainwindow.ui  sortinfo.ui  userinfodialog.ui  userupdata.ui
src/Headers/: mainwindow.h  sortinfo.h  userinfodialog.h  userupdata.h
